--- a/2-sistema eragileak/6-Scriptak Linuxen.html
+++ b/2-sistema eragileak/6-Scriptak Linuxen.html
@@ -134,14 +134,14 @@
 .markdown-alert.markdown-alert-caution .markdown-alert-title {
   color: var(--color-caution);
 }
-code {
-  background-color: #eeeeee;
-  border-radius: 1.6em;
-}
-.language-bash {
+.language-bash{
   background-color: lightgray;
-  border-radius:  0.5em;
   padding: 1em;
+}
+code{
+  background-color: lightgray;
+  padding: 0.17em;
+  border-radius: 0.2em;
 }
 </style>
         
@@ -335,24 +335,25 @@ KONTADOREA=0
 <ol>
 <li>Zabaldu Visual Studio zuen repositorioan orain harte egin dugun bezala</li>
 <li>Sortu karpeta berri bat <strong>scriptak</strong> izenekoa</li>
+<li>Virtual boxen Guest Additions instalatua izan behar duzue, <a href="https://www.linuxtechi.com/install-virtualbox-guest-additions-on-ubuntu/">jarraitu gida hau ubunturako</a></li>
 <li>VirtualBox-en jarraitu pauso hauek</li>
 </ol>
 <ul>
 <li>Zuen makinaren aukeretan.
-<img src="image-19.png" alt="alt text"></li>
+<img src="file:///c:\Users\mdalmau\sinfortolosaldealh\2-sistema eragileak\image-19.png" alt="alt text"></li>
 <li>Karpeta partekatuak
-<img src="image-20.png" alt="alt text"></li>
+<img src="file:///c:\Users\mdalmau\sinfortolosaldealh\2-sistema eragileak\image-20.png" alt="alt text"></li>
 <li>Hautatu <strong>scriptak</strong> karpeta, eta <strong>scriptak</strong> izena jarri bestea utzi horrela. (kasu honetan shared jartzen du)
-<img src="image-22.png" alt="alt text"></li>
+<img src="file:///c:\Users\mdalmau\sinfortolosaldealh\2-sistema eragileak\image-25.png" alt="alt text"></li>
 </ul>
-<ol start="4">
+<ol>
 <li>
 <p>Orain nabigatu dezakezue karpeta horretara eta scriptak exekutatu</p>
 </li>
 <li>
 <p>Gomendatzen diren extensiok Visual Studio-rako
-<img src="image-23.png" alt="alt text">
-<img src="image-24.png" alt="alt text"></p>
+<img src="file:///c:\Users\mdalmau\sinfortolosaldealh\2-sistema eragileak\image-23.png" alt="alt text">
+<img src="file:///c:\Users\mdalmau\sinfortolosaldealh\2-sistema eragileak\image-24.png" alt="alt text"></p>
 </li>
 </ol>
 <h2 id="nola-entregatu-ariketak">Nola entregatu ariketak</h2>
