--- a/2-sistema eragileak/6-Scriptak Linuxen.html
+++ b/2-sistema eragileak/6-Scriptak Linuxen.html
@@ -134,15 +134,7 @@
 .markdown-alert.markdown-alert-caution .markdown-alert-title {
   color: var(--color-caution);
 }
-.language-bash{
-  background-color: lightgray;
-  padding: 1em;
-}
-code{
-  background-color: lightgray;
-  padding: 0.17em;
-  border-radius: 0.2em;
-}
+
 </style>
         
         </head>
@@ -192,6 +184,7 @@ code{
 <li><a href="#ariketa-4---kalkulagailua">Ariketa 4 - Kalkulagailua</a></li>
 <li><a href="#ariketa-5---baimenak">Ariketa 5 - Baimenak</a></li>
 <li><a href="#ariketa-6---fitxategiak">Ariketa 6 - Fitxategiak</a></li>
+<li><a href="#ariketa-7---menua">Ariketa 7 - Menua</a></li>
 </ul>
 </li>
 </ul>
@@ -340,11 +333,11 @@ KONTADOREA=0
 </ol>
 <ul>
 <li>Zuen makinaren aukeretan.
-<img src="file:///c:\Users\mdalmau\sinfortolosaldealh\2-sistema eragileak\image-19.png" alt="alt text"></li>
+<img src="image-19.png" alt="alt text"></li>
 <li>Karpeta partekatuak
-<img src="file:///c:\Users\mdalmau\sinfortolosaldealh\2-sistema eragileak\image-20.png" alt="alt text"></li>
+<img src="image-20.png" alt="alt text"></li>
 <li>Hautatu <strong>scriptak</strong> karpeta, eta <strong>scriptak</strong> izena jarri bestea utzi horrela. (kasu honetan shared jartzen du)
-<img src="file:///c:\Users\mdalmau\sinfortolosaldealh\2-sistema eragileak\image-25.png" alt="alt text"></li>
+<img src="image-25.png" alt="alt text"></li>
 </ul>
 <ol>
 <li>
@@ -352,8 +345,8 @@ KONTADOREA=0
 </li>
 <li>
 <p>Gomendatzen diren extensiok Visual Studio-rako
-<img src="file:///c:\Users\mdalmau\sinfortolosaldealh\2-sistema eragileak\image-23.png" alt="alt text">
-<img src="file:///c:\Users\mdalmau\sinfortolosaldealh\2-sistema eragileak\image-24.png" alt="alt text"></p>
+<img src="image-23.png" alt="alt text">
+<img src="image-24.png" alt="alt text"></p>
 </li>
 </ol>
 <h2 id="nola-entregatu-ariketak">Nola entregatu ariketak</h2>
@@ -409,6 +402,16 @@ KONTADOREA=0
 <p>Aldagai bezela fitxategi baten izena jaso behar da eta konprobatu behar da eta ze baimena dituen, (idazteko, irakurtzeko edo exekutatzeko). Programak esango digu zeintzuk diren baimenak.</p>
 <h2 id="ariketa-6---fitxategiak">Ariketa 6 - Fitxategiak</h2>
 <p>Aldagai bezala fitxategi batzuen izena jaso eta bakoitzarentzak konprobatu existitzen den fitxategiak diren eta horrela bada, erakutsi fitxategiaren edukia pantailan.</p>
+<h2 id="ariketa-7---menua">Ariketa 7 - Menua</h2>
+<p>Sortu programa bat erabiltzaileari hurrengo aukerak eskeiniko dizkiona, 6 garren aukera hautatu harte behin eta berriro, terminala garbitu eta menua erakutsi.</p>
+<ol>
+<li>Karpeta tamaina ikusi</li>
+<li>Fitxategiak listatu</li>
+<li>Fitxategi bat sortu</li>
+<li>Karpeta sortu</li>
+<li>Karpeta eta fitxategiak ezabatu</li>
+<li>Irten</li>
+</ol>
 
             <script async src="https://cdn.jsdelivr.net/npm/katex-copytex@latest/dist/katex-copytex.min.js"></script>
             
