--- a/2-sistema eragileak/7-froga Baimenak eta Scriptak.html
+++ b/2-sistema eragileak/7-froga Baimenak eta Scriptak.html
@@ -93,6 +93,11 @@ body {
   padding: 0.8em;
   border-radius: 0.2em;
 }
+code{
+  background-color: rgb(233, 233, 233);
+  padding: 0.2em;
+  border-radius: 0.1em;
+}
 
 .markdown-alert {
   padding: 0.5rem 1rem;
